# personal-solutions-projects

./: .cursorrules  .cursorrules.md  .gitignore  Autonomous_Chat_and_History_Integration.md  Autonomous_Smartsheet_Task_Mgmt.md  COMMIT_MSG.txt  PROJECT_DIRECTIVE.md  README.md
.claude/: CLAUDE.md
projects/daily-task-assistant/: .dockerignore  .env.example  BACKLOG.md  CHANGELOG.md  DATA_PHILOSOPHY.md  DATA_PREFERENCES.md  Dockerfile  README.md  activity_log.jsonl  cli.py  package-lock.json  pyproject.toml  requirements.txt
projects/daily-task-assistant/.claude/: CLAUDE.md
projects/daily-task-assistant/api/: dependencies.py  main.py  models.py
projects/daily-task-assistant/baseline_tests/: config.json  run_baseline.py
projects/daily-task-assistant/config/: SMARTSHEET_STATUSES.md  smartsheet.yml
projects/daily-task-assistant/daily_task_assistant/: __init__.py  config.py  dataset.py  firestore.py  portfolio_context.py  smartsheet_client.py  tasks.py
projects/daily-task-assistant/docs/: CALENDAR_INTEGRATION_PLAN.md  CI_CD_Setup.md  DATA_CLOUD_VISION.md  Feature_Branch_Merge_Strategy.md  Feature_Smartsheet_Attachments.md  Gap_Analysis_Conversation_Review.md  MARK_AS_READ_IMPLEMENTATION_SUMMARY.md  Phase0_DATA_Quality_Baseline.md  Phase2_Pickup_Plan.md  Portfolio_View_Plan_v2.md  QUALITY_IMPROVEMENT_STRATEGY.md  STORAGE_ARCHITECTURE.md  TASK_ATTACHMENTS_IMPLEMENTATION_SUMMARY.md  TIMEZONE_FIX.md  attention-conversation-persistence.md
projects/daily-task-assistant/draft_log/: 8129996913446788.json
projects/daily-task-assistant/feedback_log/: feedback.jsonl
(+217 files in other folders)
